Implementacion de tipo_archivo (vista , creacion , acciones ,conexion db ) finalizado con pruebas exitosas

--- a/Alcaldia/src/main/resources/templates/home/Index.html
+++ b/Alcaldia/src/main/resources/templates/home/Index.html
@@ -1,10 +1,15 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<!DOCTYPE html>
+<html 
+  xmlns:th="http://www.thymeleaf.org"
+  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+  layout:decorate="/layouts/_MainLayout">
+<title>(ACS)Sistema de control para Alcaldía</title>
 </head>
 <body>
-    
+    <div
+     layout:fragment="content">
+
+    </div>
+
 </body>
 </html>
