--- a/Alcaldia/src/main/resources/templates/layouts/_MainLayout.html
+++ b/Alcaldia/src/main/resources/templates/layouts/_MainLayout.html
@@ -91,14 +91,13 @@
                   <ul class="nav nav-collapse">
                     <li>
                       <a th:href="@{/}">
-                        <span class="sub-item">Home</span>
+                        <span class="sub-item">Dashboard</span>
                       </a>
                     </li>
                   </ul>
                 </div>
               </li>
-
-              <!--acceso a las opciones--> 
+             
               <li class="nav-item">
                 <a data-bs-toggle="collapse" href="#base">
                   <i class="fas fa-layer-group"></i>
@@ -107,9 +106,14 @@
                 </a>
                 <div class="collapse" id="base">
                   <ul class="nav nav-collapse">
+                       <li>
+                      <a th:href="@{/cargo}">
+                        <span class="sub-item">Cargos</span>
+                      </a>
+                    </li>
                     <li>
-                      <a th:href="@{/tipodocumentoarchivo}"> 
-                        <span class="sub-item">tipo de documento</span>
+                      <a th:href="@{/usuarios}">
+                        <span class="sub-item">Usuarios</span>
                       </a>
                     </li>
                     <li>
@@ -122,9 +126,9 @@
                         <span class="sub-item">Docentes</span>
                       </a>
                     </li>
-                    <li>
-                      <a th:href="@{/usuarios}">
-                        <span class="sub-item">Usuarios</span>
+                     <li>
+                      <a th:href="@{/asignaciones}">
+                        <span class="sub-item">Asignaciones</span>
                       </a>
                     </li>
                   
@@ -783,6 +787,8 @@
     <!-- jQuery Vector Maps -->
     <script th:src="@{/assets/js/plugin/jsvectormap/jsvectormap.min.js}"></script>
     <script th:src="@{/assets/js/plugin/jsvectormap/world.js}"></script>
+
+
 
     <!-- Kaiadmin JS -->
     <script th:src="@{/assets/js/kaiadmin.min.js}"></script>
