Implementacion de controlador de documento

--- a/Alcaldia/src/main/resources/templates/layouts/_MainLayout.html
+++ b/Alcaldia/src/main/resources/templates/layouts/_MainLayout.html
@@ -117,13 +117,13 @@
                       </a>
                     </li>
                     <li>
-                      <a th:href="@{/grupos}">
-                        <span class="sub-item">Grupos</span>
+                      <a th:href="@{/documentos}">
+                        <span class="sub-item">Documentos</span>
                       </a>
                     </li>
                     <li>
-                      <a th:href="@{/docentes}">
-                        <span class="sub-item">Docentes</span>
+                      <a th:href="@{/cargo}">
+                        <span class="sub-item">Cargos</span>
                       </a>
                     </li>
                      <li>
