Vista de municipio

--- a/Alcaldia/src/main/resources/templates/layouts/_MainLayout.html
+++ b/Alcaldia/src/main/resources/templates/layouts/_MainLayout.html
@@ -112,8 +112,8 @@
                       </a>
                     </li>
                     <li>
-                      <a th:href="@{/usuarios}">
-                        <span class="sub-item">Usuarios</span>
+                      <a th:href="@{/municipios}">
+                        <span class="sub-item">Municipios</span>
                       </a>
                     </li>
                     <li>
