--- a/Alcaldia/src/main/resources/templates/documento/index.html
+++ b/Alcaldia/src/main/resources/templates/documento/index.html
@@ -45,14 +45,14 @@
             <th>Acciones</th>
         </tr>
         </thead>
-        <tbody>
+       <tbody>
 <tr th:each="doc : ${documento.content}">
     <td th:text="${doc.numeroDocumento}">Número de Documento</td>
     <td th:text="${doc.nombrePersona}">Propietario</td>
     <td th:text="${doc.detalles}">Detalles</td>
     <td th:text="${doc.estado == 1 ? 'Activo' : 'Inactivo'}">Estado</td>
     <td th:text="${#dates.format(doc.fechaEmision, 'dd/MM/yyyy')}">Fecha Emisión</td>
-    <td th:text="${doc.municipio != null ? doc.municipio.nombreMunicipio : '-'}">Municipio</td>
+    <td th:text="${doc.municipio != null ? doc.municipio.nombre_municipio : '-'}">Municipio</td>
     <td th:text="${doc.tipoDocumento != null ? doc.tipoDocumento.nombre_tipo : '-'}">Tipo</td>
     <td>
         <a th:href="@{/documentos/view/{id}(id=${doc.idDocumento})}" class="btn btn-info btn-sm">Ver</a>
