Solucion de error de proyecto

--- a/Alcaldia/src/main/resources/templates/layouts/_MainLayout.html
+++ b/Alcaldia/src/main/resources/templates/layouts/_MainLayout.html
@@ -127,8 +127,8 @@
                       </a>
                     </li>
                      <li>
-                      <a th:href="@{/asignaciones}">
-                        <span class="sub-item">Asignaciones</span>
+                      <a th:href="@{/proyectos}">
+                        <span class="sub-item">proyectos</span>
                       </a>
                     </li>
                   
