--- a/Alcaldia/src/main/resources/templates/layouts/_MainLayout.html
+++ b/Alcaldia/src/main/resources/templates/layouts/_MainLayout.html
@@ -131,6 +131,11 @@
                         <span class="sub-item">proyectos</span>
                       </a>
                     </li>
+                     <li>
+                      <a th:href="@{/empleados}">
+                        <span class="sub-item">Empleados</span>
+                      </a>
+                    </li>
                   
                    
                   </ul>
