Correcion de empleados en MainLayout

--- a/Alcaldia/src/main/resources/templates/layouts/_MainLayout.html
+++ b/Alcaldia/src/main/resources/templates/layouts/_MainLayout.html
@@ -107,8 +107,13 @@
                 <div class="collapse" id="base">
                   <ul class="nav nav-collapse">
                        <li>
-                      <a th:href="@{/cargo}">
-                        <span class="sub-item">Cargos</span>
+                      <a th:href="@{/tipodocumentoarchivo}">
+                        <span class="sub-item">Tipos de documentos</span>
+                      </a>
+                    </li>
+                     <li>
+                      <a th:href="@{/documentos}">
+                        <span class="sub-item">Documentos</span>
                       </a>
                     </li>
                     <li>
@@ -117,18 +122,8 @@
                       </a>
                     </li>
                     <li>
-                      <a th:href="@{/documentos}">
-                        <span class="sub-item">Documentos</span>
-                      </a>
-                    </li>
-                    <li>
                       <a th:href="@{/cargo}">
                         <span class="sub-item">Cargos</span>
-                      </a>
-                    </li>
-                     <li>
-                      <a th:href="@{/proyectos}">
-                        <span class="sub-item">proyectos</span>
                       </a>
                     </li>
                      <li>
@@ -136,6 +131,12 @@
                         <span class="sub-item">Empleados</span>
                       </a>
                     </li>
+                     <li>
+                      <a th:href="@{/proyectos}">
+                        <span class="sub-item">Proyectos</span>
+                      </a>
+                    </li>
+                    
                   
                    
                   </ul>
