--- a/Alcaldia/src/main/resources/templates/empleado/index.html
+++ b/Alcaldia/src/main/resources/templates/empleado/index.html
@@ -32,6 +32,46 @@
         <a th:href="@{/empleados/create}" class="btn btn-success">Crear Nuevo Empleado</a>
     </div>
 
+         <!-- Para generacion del PDF -->
+    <div class="mb-4 p-3 border rounded bg-light">
+        <h4 class="mb-3">Generar Reporte PDF con Filtros</h4>
+        <form th:action="@{/empleados/empleadoPDF}" method="get">
+            <div class="row">
+                <div class="col-md-3 form-group">
+                    <label for="fechaInicio">Fecha Contratación (Inicio):</label>
+                    <input type="date" id="fechaInicio" name="fechaInicio" class="form-control" />
+                </div>
+                <div class="col-md-3 form-group">
+                    <label for="fechaFin">Fecha Contratación (Fin):</label>
+                    <input type="date" id="fechaFin" name="fechaFin" class="form-control" />
+                </div>
+                <div class="col-md-3 form-group">
+                    <label for="id_Cargo">Cargo:</label>
+                    <select id="id_Cargo" name="id_Cargo" class="form-control">
+                        <option value="">Todos</option>
+                        <option th:each="cargo : ${cargos}" th:value="${cargo.id_cargo}" th:text="${cargo.nombre_cargo}"></option>
+                    </select>
+                </div>
+                <div class="col-md-3 form-group">
+                    <label for="id_Municipio">Municipio:</label>
+                    <select id="id_Municipio" name="id_Municipio" class="form-control">
+                        <option value="">Todos</option>
+                        <option th:each="municipio : ${municipios}" th:value="${municipio.id_municipio}" th:text="${municipio.nombre_municipio}"></option>
+                    </select>
+                </div>
+                <div class="col-md-3 form-group">
+                    <label for="estado">Estado:</label>
+                    <select id="estado" name="estado" class="form-control">
+                        <option value="">Todos</option>
+                        <option value="1">Activo</option>
+                        <option value="0">Inactivo</option>
+                    </select>
+                </div>
+            </div>
+            <button type="submit" class="btn btn-primary mt-3">Generar Reporte PDF</button>
+        </form>
+    </div>
+
     <div class="table-responsive">
         <table class="table table-bordered">
             <thead>
