--- a/Alcaldia/src/main/resources/templates/cargo/index.html
+++ b/Alcaldia/src/main/resources/templates/cargo/index.html
@@ -32,6 +32,16 @@
         <a th:href="@{/cargo/create}" class="btn btn-success">Nuevo Cargo</a>
     </div>
 
+  <!-- Muestra el mensaje de éxito si existe -->
+  <div th:if="${msg}" class="alert alert-success">
+    <span th:text="${msg}"></span>
+  </div>
+
+ <!-- Muestra el mensaje de error si existe -->
+ <div th:if="${error}" class="alert alert-danger">
+    <span th:text="${error}"></span>
+ </div>
+ 
     <table class="table table-bordered">
         <thead>
         <tr>
