--- a/Alcaldia/src/main/resources/templates/municipio/mant.html
+++ b/Alcaldia/src/main/resources/templates/municipio/mant.html
@@ -8,21 +8,23 @@
 <body>
 <section layout:fragment="content">
     <h2 th:text="${action == 'create' ? 'Crear nuevo municipio' :
-                  action == 'edit' ? 'Editar municipio' :
-                  action == 'view' ? 'Ver municipio' :
-                  action == 'delete' ? 'Eliminar municipio' : 'Municipio'}"></h2>
+                    action == 'edit' ? 'Editar municipio' :
+                    action == 'view' ? 'Ver municipio' :
+                    action == 'delete' ? 'Eliminar municipio' : 'Municipio'}"></h2>
+
+   
 
     <form th:action="@{${action == 'create' ? '/municipios/create' :
-                      action == 'edit' ? '/municipios/edit' :
-                      action == 'delete' ? '/municipios/delete' : '#'}}"
-          th:object="${municipio}" method="post">
+                       action == 'edit' ? '/municipios/edit' :
+                       action == 'delete' ? '/municipios/delete' : '#'}}"
+          th:object="${municipio}" method="post" id="proyectoForm">
 
         <input type="hidden" th:if="${municipio.id_municipio != null}" th:field="*{id_municipio}" />
 
         <div class="mb-3">
             <label for="nombre_municipio" class="form-label">Nombre del Municipio</label>
             <input type="text" th:field="*{nombre_municipio}" id="nombre_municipio" class="form-control"
-                   th:attr="readonly=${action=='view' or action=='delete'}" />
+                   th:attr="readonly=${action=='view' or action=='delete'}" required/>
             <div class="text-danger" th:if="${#fields.hasErrors('nombre_municipio')}" th:errors="*{nombre_municipio}"></div>
         </div>
 
@@ -40,5 +42,31 @@
 
     </form>
 </section>
+
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        const form = document.getElementById('proyectoForm');
+        // Valida el formulario antes de enviarlo
+        form.addEventListener('submit', function(event) {
+            const requiredFields = document.querySelectorAll('#proyectoForm [required]');
+            let allFilled = true;
+            requiredFields.forEach(field => {
+                if (!field.value) {
+                    allFilled = false;
+                }
+            });
+
+            if (!allFilled) {
+                event.preventDefault(); // Evita el envío del formulario
+                // Reemplaza el alert con un mensaje en un div
+                const errorMessage = document.createElement('div');
+                errorMessage.className = 'alert alert-danger mt-3';
+                errorMessage.role = 'alert';
+                errorMessage.textContent = 'No se puede guardar. Por favor, completa todos los campos obligatorios.';
+                form.prepend(errorMessage);
+            }
+        });
+    });
+</script>
 </body>
 </html>
